--- a/backend/booking_engine/Gemfile
+++ b/backend/booking_engine/Gemfile
@@ -1,5 +1,3 @@
-source 'https://rubygems.org'
+source "https://rubygems.org"
 
-ruby '2.6.5'
-
-gem 'rspec', group: :test
+gem "rspec", group: :test
